# ChangeLog for kde-base/kdesu
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdesu/ChangeLog,v 1.87 2008/05/15 10:09:46 corsair Exp $

  15 May 2008; Markus Rothe <corsair@gentoo.org> kdesu-3.5.9.ebuild:
  Stable on ppc64; bug #221063

  12 May 2008; Jeroen Roovers <jer@gentoo.org> kdesu-3.5.9.ebuild:
  Stable for HPPA (bug #221063).

  12 May 2008; Brent Baude <ranger@gentoo.org> kdesu-3.5.9.ebuild:
  Marking kdesu-3.5.9 ppc stable for bug 221063

  12 May 2008; Raúl Porcel <armin76@gentoo.org> kdesu-3.5.9.ebuild:
  alpha/ia64/sparc stable wrt #221063

*kdesu-4.0.3 (03 Apr 2008)

  03 Apr 2008; Wulf C. Krueger <philantrop@gentoo.org> +kdesu-4.0.3.ebuild:
  Version bump to KDE 4.0.3. This is still not intended for mainstream so DO
  NOT KEYWORD IT without talking to the KDE herd first.

  20 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kdesu-4.0.1.ebuild:
  Old.

*kdesu-4.0.2 (10 Mar 2008)

  10 Mar 2008; Wulf C. Krueger <philantrop@gentoo.org> +kdesu-4.0.2.ebuild:
  Version bump to KDE 4.0.2

  04 Mar 2008; Jeroen Roovers <jer@gentoo.org> kdesu-3.5.8.ebuild,
  kdesu-3.5.9.ebuild, kdesu-4.0.1.ebuild:
  Keyword split KDE for HPPA.

*kdesu-3.5.9 (20 Feb 2008)

  20 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org> +kdesu-3.5.9.ebuild:
  Version bump to KDE 3.5.9.

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> kdesu-3.5.8.ebuild:
  Don't use bindnow-flags. Bug 210583.

  16 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> -kdesu-3.5.5.ebuild,
  -kdesu-3.5.6.ebuild, -kdesu-3.5.6-r1.ebuild, -kdesu-3.5.7.ebuild,
  -kdesu-4.0.0.ebuild:
  Spring cleaning

*kdesu-4.0.1 (06 Feb 2008)

  06 Feb 2008; Wulf C. Krueger <philantrop@gentoo.org> +kdesu-4.0.1.ebuild:
  Version bump to KDE 4.0.1.

  31 Jan 2008; Brent Baude <ranger@gentoo.org> kdesu-3.5.8.ebuild:
  Marking kdesu-3.5.8 ppc for bug 207634

  30 Jan 2008; Brent Baude <ranger@gentoo.org> kdesu-3.5.8.ebuild: