@@ -1,10 +1,22 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST kdenetwork-3.5.8.tar.bz2 9334188 RMD160 3941c56411ab4cdb89ae9de116a24d0906a275da SHA1 ad96484b0fce4d224195407ffdef3b040e5069cc SHA256 7320e3d8fd9fb60ecee88ab70ccf8edf95fecf90bbbcabe4def4b26e48c20785
 DIST kdenetwork-3.5.9.tar.bz2 9339308 RMD160 3df73e0cd2b628cb49d12da3af663288aebdfd71 SHA1 a4901468e94d3433468ebf1f2213b93b37496cca SHA256 fc196f4e340255af1ab15d9346c40e77fcdd1d61114f6f999670c0a6cd23cc14
 DIST kdenetwork-4.0.2.tar.bz2 6370083 RMD160 52c50909072e21c0ed2e2073c2bdd3068ee6bbdd SHA1 edaaa37633be1e4526d9231086ef573864bb2348 SHA256 be4d2528b0719faf0385f55bd589a613e1c670c3fb0fa54065b72487a8628cc6
 DIST kdenetwork-4.0.3.tar.bz2 6374425 RMD160 b3ac0d6753eac736bb7be7cb34ad62ca0906aa78 SHA1 220fcb5dbb98279215d992c154d58dddaf71c1bd SHA256 b16776d5468b214c875f86e1025fa0c8699a36293b970f59e906e6c14f3b6625
+DIST kdenetwork-4.0.4.tar.bz2 6373873 RMD160 f56c04d1bdaa45f58c3f293d7b694b51301df6a7 SHA1 262d4496c9248abf5fa5316a83c13f81e388047b SHA256 fef837d35659bf1537d33f7dd215f482d3edfd8db6001162c79d5a41e0bb3d48
 EBUILD kdnssd-3.5.8.ebuild 482 RMD160 f092cb8f7580ca53cb78d45a81da84fc6635e8d0 SHA1 206486dcd7c2a2fc3b9cb2171a39a6fb5a8be684 SHA256 8d10f15275edebe9ce788bcddb1ae3a673300c6f8ee0baac2ddf171788250fe6
 EBUILD kdnssd-3.5.9.ebuild 454 RMD160 86c94cbd9470d2a6006c05e8f0854b7d6e068cd2 SHA1 fa25ed81bcb82aac4ba5886dd829f27e9ccb5920 SHA256 084ad8b650f1a8e584455535a7fe69a170269ecdb73cd6f868443951e468afc0
 EBUILD kdnssd-4.0.2.ebuild 751 RMD160 9d802528fccd5a507d31720b29ed52c579438ebe SHA1 4f0609cd478eb82488d8daa4b1c039762d338372 SHA256 313d3f346a23451c1752773d7c0e05f4fc9f3fc7a961a53b1c236033ca689859
 EBUILD kdnssd-4.0.3.ebuild 746 RMD160 c7b253075aa63f3a08abeb365c1bf90515726fe9 SHA1 9d96a8b8c42ffe0dd79c3cd31203ea94a38ef183 SHA256 5b3c288931711c81fd1239c2175685a76784885f21e140d08a89f2cb11fc27e7
-MISC ChangeLog 10665 RMD160 e27f15fb9904d271082bba5e4d1fc4f6e2ca9203 SHA1 b623036f7c1fe3d9e30ca57d53d111c8583cf85d SHA256 948dd2baa55cd3fa145b9043d909818de6c459ea4efcb877e124c1ee868abf0c
+EBUILD kdnssd-4.0.4.ebuild 746 RMD160 75f0e7d8a8bdae2d8fad2954191279387ea1645f SHA1 24c658869d5339c7fa56afef98a1d058eeff2c9f SHA256 5bf540e3ec05cf74f6763d8a54d16d3df89ac5e5d77d3a5ae272758a7c6c7e0f
+MISC ChangeLog 10843 RMD160 8285c95ad009fef6a1daaf33321406506dd05570 SHA1 d683395674c1739a1ba9eff6fbedc543d40a8e4e SHA256 355231a9a110a583c3c4011bef76d101b5fe53d0a6baf16091e3dd1f7442676f
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkgsx50ACgkQB18eXLOpYdnFtgCgi/yiVPLeT3X/BuPuvdX8Y0j1
+LaYAn01Bdne61xu98EYl7UPYCRKOrU4V
+=MdKo
+-----END PGP SIGNATURE-----
